# Optimized_VAT

./: LICENSE  README.md  pyproject.toml  test.ipynb
.github/workflows/: publish.yml
src/: VAT.py  fast_VAT.py  iVAT.py  op_VAT.py  pq_VAT.py  sand2.ipynb  test.ipynb
src/vat_algorithms/: iVAT.py  test.ipynb
