[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vat_algorithms"
version = "0.0.1"
authors = [
  { name="Paritosh", email="" },
  { name="Krishna Murthy", email=""}
]
description = "Visual Assessment of Cluster Tendency (VAT) family of Algorithms"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: WTFPL",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
