[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vat_algorithms"
version = "1.0.0"
authors = [
  { name="Paritosh", email="" },
  { name="Krishna Murthy", email=""}
]
description = "Visual Assessment of Cluster Tendency (VAT) family of Algorithms"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/paritosh-101/Optimized_VAT"
Issues = "https://github.com/paritosh-101/Optimized_VAT/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vat_algorithms"]